# projectying

./: .gitignore  Cargo.toml  README.md  run.sh  selfcheck.sh
config/: dog_api.example.json  dog_api.json  main_api.example.json  main_api.json  system.example.json  system.json
memory/: fastmemo.jsonl  memo.db  token_total.json
prompts/: Skills index.md  context_compact.txt  ctxmainprompt.txt  dog.txt  main.txt
scripts/: bootstrap-termux.sh  bootstrap.sh  gen_index.sh  prepush-check.sh  run.sh  selfcheck.sh
src/: main.rs  mcp.rs  memorydb.rs  ui.rs
