[package]
name = "ying"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
libc = "0.2"
pulldown-cmark = "0.13"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
unicode-width = "0.1"
